add controller, routes & tests

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "author": "Jessie Yu",
   "license": "ISC",
   "dependencies": {
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
