--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^8.52.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3"
   }
 }
