--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,9 @@
     "pino": "^8.16.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "eslint": "^8.52.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
