--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "pino": "^8.16.0"
+    "pino": "^8.16.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
